# pydcscontrol

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
led_monitor/: README.md  arduino_led_tower.ino  dcs_led.sh  dcs_led_launcher.sh
src/pydcscontrol/: __init__.py  client.py  exceptions.py  main.py  models.py  protocol.py
tests/: test_cli.py  test_client.py  test_imports.py  test_protocol.py  test_set_channel1_continuous_cli.py
