[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pydcscontrol"
version = "0.1.2"
description = "Network client for Advanced Illumination DCS light controllers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
easy-set = "pydcscontrol.main:easy_set"
turn-off = "pydcscontrol.main:turn_off"

[dependency-groups]
dev = [
	"pytest>=8.4.0",
	"ruff>=0.15.15",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/pydcscontrol"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
